--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.3",
